<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotCompletedActivity">

    <TextView
        android:id="@+id/todoTaskHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/todoTaskHeader"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/editHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editHint"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todoTaskHeader" />

    <TextView
        android:id="@+id/taskName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/taskName"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todoTaskHeader" />


    <TextView
        android:id="@+id/taskNameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:clickable="true"
        android:enabled="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskName"
        app:layout_constraintTop_toBottomOf="@+id/todoTaskHeader" />

    <TextView
        android:id="@+id/taskCreationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/createdAt"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskName" />

    <TextView
        android:id="@+id/taskCreationTimeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskCreationTime"
        app:layout_constraintTop_toBottomOf="@+id/taskNameValue" />

    <TextView
        android:id="@+id/taskEditTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/edited_at"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskCreationTime" />

    <TextView
        android:id="@+id/taskEditTimeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taskEditTime"
        app:layout_constraintTop_toBottomOf="@+id/taskCreationTimeValue" />

    <TextView
        android:id="@+id/taskIsComplete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:text="@string/isComplete"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskEditTime" />

    <CheckBox
        android:id="@+id/taskIsCompleteValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="26sp"
        app:layout_constraintStart_toEndOf="@+id/taskIsComplete"
        app:layout_constraintTop_toBottomOf="@+id/taskEditTimeValue" />

    <Button
        android:id="@+id/Done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskIsComplete" />

    <!--    <Button-->
    <!--        android:id="@+id/button2"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/cancel"-->
    <!--        android:textSize="26sp"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/taskIsComplete" />-->


</androidx.constraintlayout.widget.ConstraintLayout>